--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 
+# The following two properties makes spring redirect error handling to the resource at '/failure' instead
+# of using the default error handler. It should not be necessary to use these properties, see comment at
+# the method ExceptionHandlers.getErrorPath().
+server.error.path=/failure
+server.error.whitelabel.enabled=false
 
 # Uncomment the line below to make hibernate print all sql statements.
 #spring.jpa.properties.hibernate.show_sql=true
