--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Settings for using the PostgreSQL database. The env variables POSTGRES_URL, 
 # POSTGRES_USERNAME, and POSTGRES_PASSWORD needs to be set manually.
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.hbm2ddl.auto=validate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=123
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.hbm2ddl.auto=validate
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 
 # The following two properties makes spring redirect error handling to the resource at '/failure' instead
 # of using the default error handler. It should not be necessary to use these properties, see comment at
